# RepoTranslate

./: .env.example  .gitignore  README.md  app_launcher.py  pyproject.toml  requirements.txt  run.bat
app/: main.py
app/analyzers/: architecture.py  base.py  basic_stats.py  code_quality.py  contributors.py  readme_summary.py  registry.py  roadmap.py  tech_stack.py
app/api/: router.py
app/core/: config.py  constants.py  dependencies.py  exceptions.py
app/models/: analysis.py  github.py  request.py
app/services/: github_client.py  path_helper.py  report_renderer.py  token_manager.py  url_parser.py
app/web/: router.py
app/web/static/css/: style.css
app/web/templates/: base.html.j2  index.html.j2  settings.html.j2
app/web/templates/partials/: analysis_score.html.j2  error_banner.html.j2  repo_card.html.j2
tests/: conftest.py  test_url_parser.py
